--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Emoji Plate is a collection of emojis created by Haneen Mahdin on GitHub, that gives you a collection of emojis you have never saw before on your keyboard. We also have a API to access our emoji collection."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Emoji Plate | A Emoji Collection that gets you emojis you have never saw before</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
