add search console script

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Emoji Plate is a collection of emojis created by Haneen Mahdin on GitHub, that gives you a collection of emojis you have never saw before on your keyboard. We also have a API to access our emoji collection."
     />
+    <meta name="google-site-verification" content="5OmRF70dKER4DuToWf2RVn5YXbfDSRmjHJruvZqN_b4" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script async src="https://cdn.splitbee.io/sb.js"></script>
