add adsense code

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!--Adsense-->
+    <script data-ad-client="ca-pub-4813237368814686" async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!--Adsense-->
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
