--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <!--Adsense-->
     <script data-ad-client="ca-pub-4813237368814686" async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4813237368814686"
+        crossorigin="anonymous"></script>
     <!--Adsense-->
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
